argocd/app/calibre-web/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector: {}
  template:
    spec:
      serviceAccountName: calibre-web
      hostUsers: true
      automountServiceAccountToken: true
      securityContext: 
        fsGroup: 568
        runAsGroup: 568
        runAsUser: 0
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: calibre-web
          image: "ghcr.io/linuxserver/calibre-web:0.6.24"
          imagePullPolicy: IfNotPresent
          securityContext: 
            allowPrivilegeEscalation: true
            readOnlyRootFilesystem: false
          envFrom: []
          ports: 
            - name: http
              containerPort: 8083
              protocol: TCP
            
          volumeMounts: 
            - name: books
              mountPath: "/books"
              subPath: "books"
            - name: config
              mountPath: "/config"
              subPath: ""
          livenessProbe: 
            tcpSocket:
              port: 8083
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          readinessProbe: 
            tcpSocket:
              port: 8083
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          startupProbe: 
            tcpSocket:
              port: 8083
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          resources: 
            limits:
              cpu: 1500m
              memory: 1532Mi
            requests:
              cpu: 200m
              memory: 100Mi
      volumes: []
