argocd/app/calibre-web/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  labels:
    app.kubernetes.io/name: "calibre-web"
    app.kubernetes.io/instance: "calibre-web"
  annotations: {}
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: "calibre-web"
    app.kubernetes.io/instance: "calibre-web"
