argocd/app/calibre-web/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web
spec:
  tls:
    - hosts: []
      secretName: calibre-web-cert
  rules:
    - host: "TO_BE_FILLED"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: calibre-web
                port:
                  number: 8083
